force-app/main/default/objects/Channel__c/Channel__c.object-meta.xml
<CustomObject>
    <description>[###][Channel__c]</description>
    <label>Canal</label>
    <nameField>
        <label>Nome de Canal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>