force-app/main/default/objects/Channel__c/fields/ActiveVerdeAmancoKitLkp__c.field-meta.xml
<CustomField>
    <fullName>ActiveVerdeAmancoKitLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit Verde Amanco Ativo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>VerdeAmancoKit__c.ChannelLkp__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>VerdeAmancoKit__c</referenceTo>
    <relationshipLabel>Canais</relationshipLabel>
    <relationshipName>Channels</relationshipName>
    <type>Lookup</type>
</CustomField>