force-app/main/default/objects/Channel__c/fields/ChannelGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>ChannelGroupTxt__c</fullName>
    <label>Grupo do Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amanco Predial</fullName>
            </value>
            <value>
                <fullName>Amanco Infra</fullName>
            </value>
            <value>
                <fullName>Amanco Irriga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>