force-app/main/default/objects/Channel__c/fields/CodeTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>