force-app/main/default/objects/Channel__c/fields/DescriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>DescriptionTxt__c</fullName>
    <label>Descrição</label>
    <length>80</length>
    <type>Text</type>
</CustomField>