force-app/main/default/objects/Channel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CodeTxt__c</columns>
    <columns>NAME</columns>
    <columns>DescriptionTxt__c</columns>
    <columns>ChannelGroupTxt__c</columns>
    <columns>ActiveVerdeAmancoKitLkp__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>